--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 
 .fa-home {
     color: #7450A9 !important;
+    
 }
 
 .fa-bell:hover{
@@ -691,7 +692,7 @@ grid-column: 2 / 3;
 	height: 6.5rem;
 	background-color: #fff;
 	display: flex;
-	justify-content: center;    
+	
 	box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.3);
   margin-bottom: 2rem;
 }
@@ -699,6 +700,8 @@ grid-column: 2 / 3;
 .icons {
 	display: flex;
 	align-items: center;
+  position:relative;
+  left: 50%;
 }
 
 .icons a {
@@ -709,39 +712,13 @@ grid-column: 2 / 3;
 }
 
 .icons .active {
-	color: #7450A9;
-}
-
-.search-bar {
-	display: flex;
-	align-items: center;
-	position: relative;
-}
-
-.search-bar-input {
-	width: 35rem;
-	height: 3rem;
-	border: 0.1rem solid #d6e1e9;
-	border-radius: 3rem;
-	background-color: #d6e1e9;
-	padding-left: 5rem;
-	transition: all 0.3s;
-}
-
-.search-bar-input:focus {
-	background-color: #fff;
-	border-color: #7450A9;
-}
-
-.search-bar i {
-	position: absolute;
-	font-size: 1.6rem;
-	left: 1.5rem;
-	color: #9e9a9a;
+	color: #7450A9;  
 }
 
 .user {
-	margin-left: 6rem;
+  position:absolute;
+  right: 10%;
+  margin-top: 1rem;
 	display: flex;
 	align-items: center;
 	cursor: pointer;
@@ -749,14 +726,15 @@ grid-column: 2 / 3;
 
 .user-img-wrapper {
 	width: 4rem;
-	height: 4rem;
+	height: 4rem;  
 }
 
 .user-img-wrapper img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	border-radius: 50%;
+	border-radius: 50%; 
+ 
 }
 
 .user-link {
@@ -792,7 +770,7 @@ grid-column: 2 / 3;
 	grid-column: 2 / 3;
 	grid-row: 2 / -1;
 	background-color: #fff;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .post {
@@ -834,7 +812,7 @@ grid-column: 2 / 3;
 	font-size: 1.6rem;
 }
 
-.post-text {
+.post-text  {
 	font-size: 1.6rem;
 	margin-bottom: 1rem;
 }
